src/styles.css
* {
  margin: 0;
  padding: 0;
  border: 0
}

html {
  font-size: 16px;
}

body {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)),
    url("./images/ship-image.jpg");
  min-height: 100vh;
  background-size: cover;
  background-position: center;
  display: flex;
  justify-content: center;
}

.container {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 50px;
  backdrop-filter: blur(3px);
  -webkit-backdrop-filter: blur(3px);
}

.boards {
  display: flex;
  gap: 100px;
  justify-content: center;
  opacity: 0.6;
}

.player-board, .computer-board {
  border-radius: 30px 30px 30px 30px;
  border: 3px solid white;
  overflow: hidden;
}

.player-board {
  box-shadow: 0 0 80px 18px rgb(122, 222, 231);
}

.computer-board {
  box-shadow: 0 0 80px 18px #ebecca;
}

.row {
  display: flex;
}

.square {
  padding: 25px;
  border: 1px solid #fff;
}

.ship {
  background-color: rgb(96, 94, 94);
}

.ship, .hit {
  box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.15);
}

.player-board .water {
  background-color: rgb(122, 222, 231, 0.5);
}

.computer-board .water {
  background-color: rgb(229, 223, 172, 0.5);
}

.computer-board .water:hover {
  filter: brightness(0.7);
  cursor: crosshair;
  border: 1px solid black;
}

.hit {
  background-color: brown;
}

.miss {
  background-color: rgb(229, 223, 172);
  filter: brightness(0.8);
}

.miss:hover {
  cursor: not-allowed;
}

.message-log {
  min-height: 1.5rem;
  font-size: 1.7rem;
  padding: 10px 20px;
  background-color: rgba(255, 255, 255, 0.1);
  border-radius: 40px 0px 40px 40px;
  color: white;
  border: 3px inset rgba(255, 255, 255, 0.2);
  box-shadow: 2px -2px 10px 1px #48abe0;
}

@keyframes messagePop {
  0% { opacity: 0; transform: translateY(-2px); }
  100% { opacity: 1; transform: translateY(0); }
}

.animate-log {
  animation: messagePop 0.1s ease-out forwards;
}

